# fastapi-project

./: Makefile  README.md  compose.yml
backend/: .env.example  README.md  alembic.ini  key.py  lesson.py  pyproject.toml
backend/app/: main.py
backend/app/config/: redis_config.py
backend/app/database/: setting.py
backend/app/db/: base.py  session.py
backend/app/exceptions/: handler.py
backend/app/middleware/: base_middleware.py
backend/app/models/: todo.py  user.py
backend/app/redis/: redis.py
backend/app/repositories/: todo_repository.py
backend/app/schemas/: common.py  csrf.py  todo.py  token.py  user.py
backend/app/utils/: auth_util.py  crypt_util.py  string_util.py
backend/database/: base.py  setting.py
backend/database/migrations/: env.py
backend/lesson/: color.py  comprehension.py  config.py  custom_exception.py  datetime_lesson.py  default_library.py  exception.py  generator.py  global.py  lambda.py  lesson58.py  list_comprehension.py  name.py  sort.py  style_rule.py  subprocess_lesson.py  test_mysql.py  use_package.py
backend/lesson/bs4/: lesson.py
backend/lesson/calendar/: .gitignore  combine.py  generate_calendar.py  generate_image.py  main.py
backend/lesson/class/: car.py  class_var.py  magic_method.py  method.py  multiple_inheritance.py  person.py  person_abc.py
backend/lesson/config/: parse.py  yaml_lesson.py
backend/lesson/file/: create_file.py  csv_lesson.py  file_operation.py  read_write.py  seek.py  tar_lesson.py  template.py  template.txt  test.csv  tmp.py  zip_lesson.py
backend/migrations/: env.py
(+50 files in other folders)
