[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
termcolor = "^2.3.0"
pyyaml = "^6.0.1"
requests = "^2.31.0"
openai = "^0.28.1"
python-dotenv = "^1.0.0"
pillow = "^10.1.0"
bs4 = "^0.0.1"
lxml = "^4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
